[package]
name = "torrust-tracker"
version = "2.0.1"
authors = ["Mick van Dijke <mick@dutchbits.nl>", "Naim A. <naim@abda.nl>"]
description = "A feature rich BitTorrent tracker."
edition = "2021"

[profile.release]
lto = "fat"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.5"
serde_json = "1.0.78"
hex = "0.4.3"
percent-encoding = "2.1.0"
warp = { version = "0.3.2", features = ["tls"] }
tokio = { version = "1.15.0", features = ["macros", "io-util", "net", "time", "rt-multi-thread", "fs", "sync", "signal"] }
binascii = "0.1.4"
toml = "0.5.8"
log = { version = "0.4.14", features = ["release_max_level_info"] }
fern = "0.6.0"
chrono = "0.4.19"
byteorder = "1.4.3"
external-ip = "4.1.0"
r2d2_sqlite = "0.19.0"
r2d2 = "0.8.9"
rand = "0.8.4"
env_logger = "0.9.0"
config = "0.11.0"
derive_more = "0.99.17"
